# flowdesk

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: gtest.cmake
doc/newsfragments/: flowdesk-macos-rosetta-helper.bugfix
docs/design/: tauri-gui.md
src/gui-tauri/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/gui-tauri/scripts/: build-bundled-barriers.sh  move-barriers-to-helpers.sh  post-bundle.sh
src/gui-tauri/src/: App.tsx  api.ts  styles.css  types.ts
src/gui-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src/gui-tauri/src-tauri/capabilities/: default.json
src/gui-tauri/src-tauri/icons/: icon.icns
src/gui-tauri/src-tauri/src/: commands.rs  config.rs  logparse.rs  macos.rs  main.rs  settings.rs  supervisor.rs  tray.rs
src/gui-tauri/src-tauri/tests/: integration.rs
src/gui-tauri/src/components/: AccessibilityBanner.tsx  FingerprintDialog.tsx  LogPanel.tsx  PermissionGuide.tsx  ScreenGrid.tsx  SettingsPanel.tsx
