[package]
name = "flowdesk"
version = "0.1.0"
description = "FlowDesk — software KVM (fork of Barrier)"
authors = ["helloxkk"]
license = "GPL-2.0-only"
repository = "https://github.com/helloxkk/flowdesk"
default-run = "flowdesk"
edition = "2021"
rust-version = "1.77"

# Avoid name clash with the C++ `barrier` project name; the binary is `flowdesk`.
[[bin]]
name = "flowdesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
regex = "1"
hostname = "0.4"
get_if_addrs = "0.5"

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]
